# BlackScholes

./: CMakeLists.txt  README.md  conanfile.txt
include/bs/: compute.hh
report/: results.csv  results_x64.csv
src/: compute.cc  main.cc
